# rust-scratch

./: .gitignore  .gitmodules  Cargo.toml  rust.note
distances/: Cargo.toml
distances/src/: lib.rs  main.rs
parser/: Cargo.toml
parser/src/: cif.rs  combine.rs  formats.rs  lib.rs  mol2.rs  nom_parser.rs  parser.rs  pdb.rs  pickle.rs  sdf.rs  vasp.rs
parser/src/formats/: cif.rs  mol2.rs  pdb.rs  sdf.rs  vasp.rs  xyz.rs
parser/tests/: g16-example.fchk  multi.pxyz  multi.xyz
reaction/: Cargo.toml
reaction/src/: main.rs
reaxb/src/: atoms.rs  graph.rs  lammps.rs  lib.rs  main.rs
src/: main.rs
