# cargo

# [[file:~/Workspace/Programming/rust-scratch/parser/parser.note::*cargo][cargo:1]]
[package]
name = "textparser"
version = "0.0.1"
edition = "2018"
authors = ["Wenping Guo <ybyygu@gmail.com>"]

[dependencies]
quicli = "*"
#combine = "*"
nom = "4.1"
#serde = "*"
#serde-pickle = "*"
gchemol = { git = "https://github.com/ybyygu/gchemol.git" }
# cargo:1 ends here
